--- a/.gitignore
+++ b/.gitignore
@@ -127,10 +127,13 @@ dmypy.json
 .pyre/
 
 # ===== PROJETO ESPECÍFICO =====
-# Banco de dados
+# Banco de dados SQLite (local apenas - em produção usa PostgreSQL)
 data/homologacao.db
 data/homologacao.db-wal
 data/homologacao.db-shm
+data/clinica.db
+data/clinica.db-wal
+data/clinica.db-shm
 
 # Documentos gerados
 data/generated_documents/*.docx
@@ -139,6 +142,18 @@ data/generated_documents/*.pdf
 # Logs
 data/logs/*.log
 data/logs/*.log.*
+
+# ===== FRONTEND (Node.js/React) =====
+node_modules/
+frontend/node_modules/
+frontend/dist/
+frontend/build/
+frontend/.env.local
+frontend/.env.production
+.pnpm-store/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Backups
 *.backup
