--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,10 @@
-# ===== Sistema de Homologação de Atestados Médicos =====
-# Autor: Kauan Kelvin
-# Versão: 2.0.0
-# Data: 28/10/2025
-
-# Interface Gráfica
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-
-# Manipulação de Documentos Word
-python-docx==1.1.0
-lxml==4.9.3
-
-# Utilitários
-Pillow==10.1.0
-
-# Ferramentas de Desenvolvimento (Opcional)
-# Descomente as linhas abaixo para desenvolvimento
-
-# Empacotamento
-# pyinstaller==6.1.0
-
-# Testes
-# pytest==7.4.3
-# pytest-qt==4.2.0
-
-# Análise de Código
-# pylint==3.0.2
-# black==23.11.0
-
-# ===== NOTAS DE INSTALAÇÃO =====
-# 
-# Para instalar as dependências:
-#   pip install -r requirements.txt
-#
-# Para criar executável:
-#   pip install pyinstaller
-#   pyinstaller main.spec
-#
-# Para desenvolvimento:
-#   pip install -r requirements.txt
-#   pip install pytest pytest-qt pylint black
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+gunicorn==21.2.0
+pydantic==2.9.2
+python-multipart==0.0.17
+python-docx==1.1.2
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+reportlab==4.2.5
+docx2pdf==0.1.8
